--- a/lecture_01/worksheet_01.ipynb
+++ b/lecture_01/worksheet_01.ipynb
@@ -161,6 +161,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -170,11 +171,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Git is a version-control system used to keep track of code changes while Github is a website to backup and host your files. "
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -182,11 +187,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "git clone"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -194,9 +203,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "the code button to get the ssh URL"
+   ]
   },
   {
    "attachments": {},
@@ -207,11 +219,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "No, because the copy on your laptop is a local copy, meaning it has no access to the online GitHub repo. "
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -219,9 +235,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. git add <files>\n",
+    "2. git commit -m 'message'\n",
+    "3. git push"
+   ]
   },
   {
    "attachments": {},
@@ -232,11 +253,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Git rebase or git pull for local repo because it needs to be updated. Then git push after previous commands to make they are up-to-date."
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -244,11 +269,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "There are conflicts if the timelines for different branches do not line up when they are being committed. You resolve it by rebasing the branches to prevent merge conflicts."
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -256,11 +285,18 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. Fork the repository\n",
+    "2. Specify which branch\n",
+    "3. Do compare & pull request\n",
+    "4. Create a pull request"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -268,9 +304,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. git log - shows the commit history, used to see what was changed in each commit\n",
+    "2. git rebase - moves the branches around to prevent merge conflicts by moving the base of one branch to the tip of the other\n",
+    "3. git branch - creates a new environment in the same repository to make commits to"
+   ]
   }
  ],
  "metadata": {
