--- a/lecture_03/worksheet_03.ipynb
+++ b/lecture_03/worksheet_03.ipynb
@@ -7,8 +7,9 @@
    "source": [
     "# Worksheet 03\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name: Rohan Anand\n",
+    "\n",
+    "UID: U23735730\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -26,7 +27,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "It must be tested against both positive and negative examples. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -38,7 +41,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The rule seems to be that each triplet is (n, n + 2, n + 4). The example I would want to try is (3, 5, 7), (4, 6, 8). "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -50,7 +55,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "B"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -66,7 +73,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "These are all positive examples because they are true for the rule (n, n + 2, n + 4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,7 +87,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "C"
+   ]
   },
   {
    "attachments": {},
@@ -91,7 +102,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1) Ask what and who the model is used/intended for because each model can output a different result on different datasets\n",
+    "\n",
+    "Process data -> Explore data -> Extract features -> Create model"
+   ]
   },
   {
    "attachments": {},
@@ -109,7 +124,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Record - information about BU students, like age, major, graduation year, etc.\n",
+    "\n",
+    "Graph - the subway\n",
+    "\n",
+    "Image - a photograph\n",
+    "\n",
+    "Text - a collection of articles about a specific topic"
+   ]
   },
   {
    "attachments": {},
@@ -122,7 +145,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Given a set of articles, analyze words in them to find out which of them are about the same or similar topics"
+   ]
   },
   {
    "attachments": {},
@@ -135,7 +160,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Given some medical features, predicting whether a patient has cancer "
+   ]
   }
  ],
  "metadata": {
