--- a/lecture_04/worksheet_04.ipynb
+++ b/lecture_04/worksheet_04.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 04\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name: Rohan Anand\n",
+    "UID: U23735730\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -29,7 +29,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "d - the dimensionality of the vector, how many elements each vector has\n",
+    "\n",
+    "p - parameter, used to parameterize the distance and represents any root"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -41,7 +45,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "euclidean - shortest path between x, y\n",
+    "\n",
+    "manhattan - not possible to measure diagonally, need to calculate path in a square grid"
+   ]
   },
   {
    "attachments": {},
@@ -61,7 +69,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The distance would be very small "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,7 +83,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "No, because the triangle inequality is violated."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,7 +97,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "when direction matters more than magnitude"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,7 +111,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "It accounts for the size of the interesction between two documents"
+   ]
   },
   {
    "attachments": {},
@@ -111,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,15 +166,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['hello', 'Bob', 'is', 'name', 'my', 'Alice']\n",
-      "[1, 0, 1, 1, 1, 1]\n"
+      "['Bob', 'is', 'Alice', 'my', 'hello', 'name']\n",
+      "[0, 1, 1, 1, 1, 1]\n"
      ]
     }
    ],
@@ -179,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,10 +212,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Bob', 'is', 'Alice', 'hi', 'my', 'hello', 'name', 'Claude']\n"
+     ]
+    }
+   ],
+   "source": [
+    "corpus = [s1, s2, s3]\n",
+    "all_words = list(set([item for x in corpus for item in x.split()]))\n",
+    "print(all_words)"
+   ]
   },
   {
    "attachments": {},
@@ -211,10 +239,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Bob', 'is', 'Alice', 'hi', 'my', 'hello', 'name', 'Claude']\n",
+      "[0, 1, 1, 0, 1, 1, 1, 0]\n",
+      "[1, 1, 0, 0, 1, 1, 1, 0]\n",
+      "[0, 1, 0, 1, 1, 0, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(all_words)\n",
+    "v1 = [1 if x in s1 else 0 for x in all_words]\n",
+    "print(v1)\n",
+    "v2 = [1 if x in s2 else 0 for x in all_words]\n",
+    "print(v2)\n",
+    "v3 = [1 if x in s3 else 0 for x in all_words]\n",
+    "print(v3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -225,10 +272,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def minkowski_dist(x, y, p):\n",
+    "    if p < 1:\n",
+    "        raise ValueError('p must be greater than 1')\n",
+    "    if len(x) != len(y):\n",
+    "        raise ValueError('x, y must be same dimensional space')\n",
+    "    res = 0\n",
+    "    for i in range(len(x)):\n",
+    "        res += abs(x[i] - y[i]) ** p\n",
+    "    return res ** (1/p)\n",
+    "\n",
+    "def manhattan_dist(x, y):\n",
+    "    return minkowski_dist(x, y, 1)\n",
+    "\n",
+    "print(manhattan_dist(v1, v2))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -250,10 +320,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Bob', 'is', 'Alice', 'hi', 'my', 'hello', 'name', 'Claude']\n",
+      "[0, 0, 1, 1, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 1, 0, 1]\n",
+      "[1, 1, 0, 0, 1, 0, 1, 1]\n",
+      "[0, 1, 1, 1, 1, 0, 1, 1]\n",
+      "[1, 0, 0, 0, 0, 1, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "corpus = [\"hi Alice\", \"hello Claude\", \"Bob my name is Claude\", \"hi Claude my name is Alice\", \"hello Bob\"]\n",
+    "\n",
+    "all_words = list(set([item for x in corpus for item in x.split()]))\n",
+    "print(all_words)\n",
+    "\n",
+    "matrix = [[1 if x in sentence else 0 for x in all_words] for sentence in corpus]\n",
+    "\n",
+    "for vector in matrix:\n",
+    "    print(vector)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -264,10 +358,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "rows = len(matrix)\n",
+    "cols = len(matrix[0])\n",
+    "print(rows, cols)"
+   ]
   },
   {
    "attachments": {},
@@ -279,10 +385,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "min = manhattan_dist(matrix[0], matrix[1])\n",
+    "vectors = (0, 1)\n",
+    "\n",
+    "for i in range(len(matrix)):\n",
+    "    for j in range(len(matrix)):\n",
+    "        if i != j:\n",
+    "            new_min = manhattan_dist(matrix[i], matrix[j])\n",
+    "            if min > new_min:\n",
+    "                new_min = min\n",
+    "                vectors = (i, j)\n",
+    "print(vectors)\n",
+    "        "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -306,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
