--- a/lecture_06/worksheet_06.ipynb
+++ b/lecture_06/worksheet_06.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 06\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Rohan Anand\n",
+    "UID: U23735730\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -23,7 +23,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The centroid is chosen with respect to the probaility proportional to the distance squared"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -35,7 +37,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "It favors clusters with similar sizes. Highly dense regions are more likely to be clumped together. Non-globular clusters are not clumped regularly. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -68,7 +72,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Any number is fine based on the silhouette score."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -102,11 +108,11 @@
     "\n",
     "|   | A | B | C | D | E |\n",
     "|---|---|---|---|---|---|\n",
-    "| A | 0 |   |   |   |   |\n",
-    "| B |   | 0 |   |   |   |\n",
-    "| C |   |   | 0 |   |   |\n",
-    "| D |   |   |   | 0 |   |\n",
-    "| E |   |   |   |   | 0 |"
+    "| A | 0 | sqrt 2  |  3 | 1  | 8  |\n",
+    "| B |  sqrt 2 | 0 |  sqrt 5 | 1  |  sqrt 2 |\n",
+    "| C |  3 | sqrt 5  | 0 |  sqrt 10 |  sqrt 5 |\n",
+    "| D |  1 |  1 |  sqrt 10 | 0 |  sqrt 5 |\n",
+    "| E |  sqrt 8 | sqrt 2  |  sqrt 5 |  sqrt 5 | 0 |"
    ]
   },
   {
@@ -115,12 +121,12 @@
    "source": [
     "Step 2\n",
     "\n",
-    "|   |   |   |   |   |\n",
+    "|   |A&B   | C  | D  | E  |\n",
     "|---|---|---|---|---|\n",
-    "|   | 0 |   |   |   |\n",
-    "|   |   | 0 |   |   |\n",
-    "|   |   |   | 0 |   |\n",
-    "|   |   |   |   | 0 |"
+    "A&B | 0  | sqrt 6.5 | sqrt 0.5  |sqrt 4.5   |   |\n",
+    "| C  | sqrt 6.5  | 0 |  sqrt 10 |  sqrt 5 |\n",
+    "|  D |  sqrt 0.5 |  sqrt 10  | 0 |  sqrt 5 |\n",
+    "|  E |  sqrt 4.5 |  sqrt 5 | sqrt 5  | 0 |"
    ]
   },
   {
@@ -129,11 +135,11 @@
    "source": [
     "Step 3\n",
     "\n",
-    "|   |   |   |   |\n",
+    "|   | A&B&D  | C  |  E |\n",
     "|---|---|---|---|\n",
-    "|   | 0 |   |   |\n",
-    "|   |   | 0 |   |\n",
-    "|   |   |   | 0 |"
+    "|  A&B&D | 0 | sqrt 85/9  | sqrt 41/9  |\n",
+    "|  C | sqrt 85/9  | 0 | sqrt 5  |\n",
+    "|  E | sqrt 41/9  | sqrt 5  | 0 |"
    ]
   },
   {
@@ -142,10 +148,10 @@
    "source": [
     "Step 4\n",
     "\n",
-    "|   |   |   |\n",
+    "|   | A&B&D&E  | C  |\n",
     "|---|---|---|\n",
-    "|   | 0 |   |\n",
-    "|   |   | 0 |"
+    "|   | 0 |  sqrt 97/16 |\n",
+    "|   | sqrt 97/16  | 0 |"
    ]
   },
   {
@@ -166,11 +172,11 @@
     "\n",
     "|   | A | B | C | D | E |\n",
     "|---|---|---|---|---|---|\n",
-    "| A | 0 |   |   |   |   |\n",
-    "| B |   | 0 |   |   |   |\n",
-    "| C |   |   | 0 |   |   |\n",
-    "| D |   |   |   | 0 |   |\n",
-    "| E |   |   |   |   | 0 |"
+    "| A | 0 | sqrt 2  | 3  |  1 | sqrt 8  |\n",
+    "| B | sqrt 2  | 0 |  sqrt 5 |  1 |  sqrt 2 |\n",
+    "| C |  3 |  sqrt 5 | 0 | sqrt 10  | sqrt 5  |\n",
+    "| D |  1 |  1 |  sqrt 10 | 0 | sqrt 5  |\n",
+    "| E |  sqrt 8 | sqrt 2  | sqrt 5  |  sqrt 5 | 0 |"
    ]
   },
   {
@@ -179,12 +185,12 @@
    "source": [
     "Step 2\n",
     "\n",
-    "|   |   |   |   |   |\n",
+    "|   | A&C  | B  |  D | E  |\n",
     "|---|---|---|---|---|\n",
-    "|   | 0 |   |   |   |\n",
-    "|   |   | 0 |   |   |\n",
-    "|   |   |   | 0 |   |\n",
-    "|   |   |   |   | 0 |"
+    "| A&C  | 0 | sqrt 5/4  | sqrt 13/4  | sqrt 5/4  |\n",
+    "|  B | sqrt 5/4  | 0 | 1  | sqrt 2  |\n",
+    "|  D | sqrt 13/4  |  1 | 0 | sqrt 5  |\n",
+    "|  E | sqrt 5/4  | sqrt 2  | sqrt 5  | 0 |"
    ]
   },
   {
@@ -193,11 +199,11 @@
    "source": [
     "Step 3\n",
     "\n",
-    "|   |   |   |   |\n",
+    "|   | A&C&D  | B  | E  |\n",
     "|---|---|---|---|\n",
-    "|   | 0 |   |   |\n",
-    "|   |   | 0 |   |\n",
-    "|   |   |   | 0 |"
+    "|  A&B&D | 0 | 2/3  | sqrt 34/9  |\n",
+    "|  B | 2/3  | 0 |  sqrt 2 |\n",
+    "|  E |  sqrt 34/9 | sqrt 2  | 0 |"
    ]
   },
   {
@@ -206,10 +212,10 @@
    "source": [
     "Step 4\n",
     "\n",
-    "|   |   |   |\n",
+    "|   | A&C&D&E  | B  |\n",
     "|---|---|---|\n",
-    "|   | 0 |   |\n",
-    "|   |   | 0 |"
+    "|   | 0 | sqrt 1/8  |\n",
+    "|   |  sqrt 1/8 | 0 |"
    ]
   }
  ],
