--- a/lecture_05/worksheet_05.ipynb
+++ b/lecture_05/worksheet_05.ipynb
@@ -7,8 +7,9 @@
    "source": [
     "# Worksheet 05\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Rohan Anand\n",
+    "\n",
+    "UID: U23735720\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -46,7 +47,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. calculate the distances from each initial centroid to each point\n",
+    "\n",
+    "for 0: [0.5]; for 2: [1.5, 2, 6, 6.5, 7]\n",
+    "\n",
+    "2. assign to cluster which data point is closest to \n",
+    "\n",
+    "3. calculate the new centroid based on the clustering\n",
+    "\n",
+    "4. repeat 2 and 3 until the centroid stops moving"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,7 +69,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "the cost function is a function that tells you whether you are approaching an optimal solution"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,7 +83,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "it depends on the starting cluster since it will be influenced by the surrounding points"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -82,7 +97,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Yes, it does because it will eventually reach a point where points will definitely be closer to one centroid than another since you are looking at a cost function that minimize distance"
+   ]
   },
   {
    "attachments": {},
@@ -94,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,6 +131,9 @@
     "        self.assignment = [-1 for _ in range(len(data))]\n",
     "        self.snaps = []\n",
     "    \n",
+    "    def distance(self, x, y):\n",
+    "        return np.lin_alg.norm(x - y)\n",
+    "    \n",
     "    def snap(self, centers):\n",
     "        TEMPFILE = \"temp.png\"\n",
     "\n",
@@ -124,10 +144,46 @@
     "        plt.close()\n",
     "        self.snaps.append(im.fromarray(np.asarray(im.open(TEMPFILE))))\n",
     "\n",
+    "    def initialize(self):\n",
+    "        return self.data[np.random.choice(range(len(self.data)), self.k, replace = False)]\n",
+    "\n",
+    "    def assign(self, centers): \n",
+    "        for i in range(len(self.data)):\n",
+    "            minimum = self.distance(centers[0], self.data[i])\n",
+    "            for j in range(len(centers)):\n",
+    "                dist = self.distance(centers[j], self.data[i])\n",
+    "                if dist < minimum:\n",
+    "                    minimum = dist\n",
+    "                    self.assignment[i] = j\n",
+    "\n",
+    "        return\n",
+    "    \n",
+    "    def is_diff_clusters(centers, new_centers):\n",
+    "        for i in range(len(centers)):\n",
+    "            if self.distance(centers[i], new_centers[i]) != 0:\n",
+    "                return True\n",
+    "        return False\n",
+    "    \n",
+    "    def get_centers(self):\n",
+    "        for i in set(self.assignments):\n",
+    "            cluster = []\n",
+    "            for j in range(len(self.data)):\n",
+    "                if self.assignment[j] == i:\n",
+    "                    cluster.append(self.data[j])\n",
+    "            centers.append(np.mean(cluster))\n",
+    "        return centers\n",
     "\n",
     "    def lloyds(self):\n",
-    "        ...\n",
-    "        return\n",
+    "        centers = self.initialize()\n",
+    "        self.assign(centers)\n",
+    "        self.snap(centers)\n",
+    "\n",
+    "        while self.is_diff_clusters():\n",
+    "            new_centers = self.get_centers()\n",
+    "            self.assign(new_centers)\n",
+    "            self.snap(new_centers)\n",
+    "            centers = new_centers\n",
+    "        return \n",
     "            \n",
     "\n",
     "kmeans = KMeans(X, 6)\n",
@@ -143,6 +199,13 @@
     "    duration=500\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -152,8 +215,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.1"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
