--- a/lecture_08/worksheet_08.ipynb
+++ b/lecture_08/worksheet_08.ipynb
@@ -7,8 +7,9 @@
    "source": [
     "# Worksheet 08\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Rohan Anand\n",
+    "\n",
+    "UID: U23735730\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -26,9 +27,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4.046963866763451, 3.6686538810709175, 4.6257675042035284, 4.69827733116464, 3.986715939315543, 5.5034843752381395, 5.46514731746146, 5.3748488223134485, 8.23833798038552, 5.514625540521861]\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "import numpy as np\n",
@@ -50,11 +59,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9.237725959515625, 9.557478209878242, 7.87513091857493, 8.028614228985882, 7.843999081685762, 6.5545905128120205, 8.665296628787065, 8.160753902643318, 7.793926149525289, 8.676603969506575]\n"
+     ]
+    }
+   ],
    "source": [
-    "c2 = np.random.normal( ... , ... , ... ).tolist()\n",
+    "c2 = np.random.normal(8, 1, 10).tolist()\n",
     "print(c2)"
    ]
   },
@@ -67,19 +84,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5.514625540521861, 8.23833798038552, 8.676603969506575, 5.3748488223134485, 5.46514731746146, 7.793926149525289, 5.5034843752381395, 8.160753902643318, 3.986715939315543, 8.665296628787065]\n"
+     ]
+    }
+   ],
    "source": [
     "data = []\n",
     "for i in range(10):\n",
     "    # flip coin\n",
     "    coin_output = random.choice([0, 1])\n",
     "    if coin_output == 0:\n",
-    "        p1 = ...\n",
+    "        p1 = c1.pop()\n",
     "        data.append(p1)\n",
     "    else:\n",
-    "        p2 = ...\n",
+    "        p2 = c2.pop()\n",
     "        data.append(p2)\n",
     "print(data)"
    ]
@@ -94,7 +119,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The data is created from random values from two distributions."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -111,20 +138,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8.23833798038552, 8.676603969506575, 7.793926149525289, 8.160753902643318, 8.665296628787065]\n",
+      "[5.514625540521861, 5.3748488223134485, 5.46514731746146, 5.5034843752381395, 3.986715939315543]\n",
+      "P(C_1) = 0.5,  P(C_2) = 0.5\n",
+      "mean_1 = 8.306983726169554,  mean_2 = 5.16896439897009\n",
+      "var_1 = 0.11086614742431007,  var_2 = 0.3518418753276583\n"
+     ]
+    }
+   ],
    "source": [
     "kmeans = KMeans(2, init='k-means++').fit(X=np.array(data).reshape(-1, 1))\n",
     "\n",
     "c1 = [x[0] for x in filter(lambda x: x[1] == 0, zip(data, kmeans.labels_))]\n",
     "print(c1)\n",
-    "c2 = ...\n",
+    "c2 = [x[0] for x in filter(lambda x: x[1] == 1, zip(data, kmeans.labels_))]\n",
     "print(c2)\n",
     "\n",
-    "prob_c = [ len(c1) / (len(c1) + len(c2)) , ... ]\n",
-    "mean = [ sum(c1)/len(c1) , ... ]\n",
-    "var = [ sum(map(lambda x : (x - mean[0])**2, c1)) / len(c1) , ... ]\n",
+    "prob_c = [ len(c1) / (len(c1) + len(c2)) , len(c2) / (len(c1) + len(c2)) ]\n",
+    "mean = [ sum(c1)/len(c1) , sum(c2)/len(c2) ]\n",
+    "var = [ sum(map(lambda x : (x - mean[0])**2, c1)) / len(c1) , sum(map(lambda x : (x - mean[1])**2, c2)) / len(c2) ]\n",
     "\n",
     "print(\"P(C_1) = \" + str(prob_c[0]) + \",  P(C_2) = \" + str(prob_c[1]))\n",
     "print(\"mean_1 = \" + str(mean[0]) + \",  mean_2 = \" + str(mean[1]))\n",
@@ -172,15 +211,15 @@
     "    prob_x = prob_c[0] * pdf_i[0] + prob_c[1] * pdf_i[1]\n",
     "\n",
     "    # P(C_j | X_i) = P(X_i | C_j)P(C_j) / P(X_i)\n",
-    "    prob_c0_x.append( ... )\n",
-    "    prob_c1_x.append( ... )\n",
+    "    prob_c0_x.append( prob_c[0] * pdf_i[0] / prob_x )\n",
+    "    prob_c1_x.append( prob_c[1] * pdf_i[1] / prob_x )\n",
     "\n",
     "probs = zip(data, prob_c0_x, prob_c1_x)\n",
     "for p in probs:\n",
     "    print(p[0])\n",
     "    print(\"Probability of coming from C_1 = \" + str(p[1]))\n",
     "    print(\"Probability of coming from C_2 = \" + str(p[2]))\n",
-    "    print()\n"
+    "    print()"
    ]
   },
   {
@@ -196,9 +235,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prob_c = [sum(prob_c0_x)/ len(prob_c0_x), ... ]\n",
-    "mean = [sum([x[0] * x[1] for x in zip(prob_c0_x, data)]) / sum(prob_c0_x), ... ]\n",
-    "var = [ ... , ... ]\n",
+    "prob_c = [sum(prob_c0_x)/ len(prob_c0_x), sum(prob_c1_x)/ len(prob_c1_x) ]\n",
+    "mean = [sum([x[0] * x[1] for x in zip(prob_c0_x, data)]) / sum(prob_c0_x), sum([x[0] * x[1] for x in zip(prob_c1_x, data)]) / sum(prob_c1_x) ]\n",
+    "var = [sum([x[0] * (x[1] - mean[0])**2 for x in zip(prob_c0_x, data)]) / sum(prob_c0_x), sum([x[0] * (x[1] - mean[1])**2 for x in zip(prob_c1_x, data)]) / sum(prob_c1_x)]\n",
     "\n",
     "print(\"P(C_1) = \" + str(prob_c[0]) + \",  P(C_2) = \" + str(prob_c[1]))\n",
     "print(\"mean_1 = \" + str(mean[0]) + \",  mean_2 = \" + str(mean[1]))\n",
@@ -222,7 +261,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "updated_prob_c0_x = [] \n",
+    "updated_prob_c1_x = []  \n",
+    "\n",
+    "for p, pc0_x, pc1_x in zip(data, prob_c0_x, prob_c1_x):\n",
+    "    updated_pc0_x = (pc0_x * prob_c[0]) / prob_x\n",
+    "    updated_pc1_x = (pc1_x * prob_c[1]) / prob_x\n",
+    "\n",
+    "    updated_prob_c0_x.append(updated_pc0_x)\n",
+    "    updated_prob_c1_x.append(updated_pc1_x)\n",
+    "\n",
+    "print(\"Updated P(C_0 | X_i) = \", updated_prob_c0_x)\n",
+    "print(\"Updated P(C_1 | X_i) = \", updated_prob_c1_x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -241,7 +293,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "hard_assignments = [] \n",
+    "\n",
+    "for pc0_x, pc1_x in zip(updated_prob_c0_x, updated_prob_c1_x):\n",
+    "    if pc0_x >= pc1_x:\n",
+    "        hard_assignments.append(0)\n",
+    "    else:\n",
+    "        hard_assignments.append(1)\n",
+    "\n",
+    "print(\"Hard assignments = \", hard_assignments)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -266,23 +328,25 @@
    "source": [
     "| Pair | Disagreement |\n",
     "|------|--------------|\n",
-    "| A  B |      ?       |\n",
-    "| A  C |      ?       |\n",
-    "| A  D |      ?       |\n",
-    "| A  E |      ?       |\n",
-    "| B  C |      ?       |\n",
-    "| B  D |      ?       |\n",
-    "| B  E |      ?       |\n",
-    "| C  D |      ?       |\n",
-    "| C  E |      ?       |\n",
-    "| D  E |      ?       |\n"
+    "| A  B |      Disagree       |\n",
+    "| A  C |      Disagree       |\n",
+    "| A  D |      Disagree       |\n",
+    "| A  E |      Disagree       |\n",
+    "| B  C |      Disagree       |\n",
+    "| B  D |      Disagree       |\n",
+    "| B  E |      Disagree       |\n",
+    "| C  D |      Disagree       |\n",
+    "| C  E |      Disagree       |\n",
+    "| D  E |      Disagree       |\n",
+    "\n",
+    "As the dataset becomes larger, there are more ordered pairs which means it becomes a computational burden to determine agreement for all pairs"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As datasets become very large, this process can become computationally challenging.\n",
+    "\n",
     "\n",
     "b) Given N points, what is the formula for the number of unique pairs of points one can create?"
    ]
@@ -290,7 +354,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "(N * (N - 1)) / 2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -316,7 +382,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "36"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -328,7 +396,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Total Agreements = 3 + 1 + 6 = 10 Total Disagreements = 36 - 10 = 26"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -340,7 +410,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "We can use a similar algorithm to what we did above but instead of comparing each pair of points we can just compare the points within each cluster. This will reduce the number of comparisons we have to make in general."
+   ]
   }
  ],
  "metadata": {
@@ -362,7 +434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
